--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-number: 1
-          body: Hello
+          issue-number: ${{github.event.number}}
+          body: Hello ${{github.event.number}}
           reactions: '+1'
       
