--- a/.github/workflows/pr_closed.yml
+++ b/.github/workflows/pr_closed.yml
@@ -18,7 +18,7 @@ jobs:
         id: fc
         with:
           issue-number: ${{github.event.number}}
-          body-includes: cherry-pick
+          body-includes: cherry-pick me
           
       - name: Comment
         uses: peter-evans/create-or-update-comment@v1
