--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{github.event.number}}
-          body: Hellop, ${{github.event.author}}, ff you want this PR to be cherry-picked to production add comment that contains 'cherry-pick' inside.
+          body: Hellop, ${{github.event.issue.user.login}}, ff you want this PR to be cherry-picked to production add comment that contains 'cherry-pick' inside.
       
