--- a/.github/workflows/pr_closed.yml
+++ b/.github/workflows/pr_closed.yml
@@ -18,6 +18,7 @@ jobs:
         id: fc
         with:
           issue-number: ${{github.event.number}}
+          comment-author: ${{github.event.pull_request.user.login}}
           body-includes: cherry-pick me
 
 
