--- a/.github/workflows/pr_closed.yml
+++ b/.github/workflows/pr_closed.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           issue-number: ${{github.event.number}}
           comment-author: ${{github.event.pull_request.user.login}}
-          body-includes: cherry-pick me
+          body-includes: cherry-pick
 
 
       - name: Comment Cherry-picked
