--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test
 on:
   pull_request:
     branches: [ master ]
-    types: [closed]
+    types: [open]
 
   workflow_dispatch:
     inputs:
@@ -32,7 +32,7 @@ jobs:
           ref: production
           clean: true
           fetch-depth: 0
-          
+
       - uses: oleksiyrudenko/gha-git-credentials@v2-latest
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
