--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,13 @@ name: Test
 on:
   pull_request:
     branches: [ master ]
-    types: [open]
+    types: [opened]
 
-  workflow_dispatch:
-    inputs:
-      branch:
-        description: 'Branch'
-        required: true
+  # workflow_dispatch:
+  #   inputs:
+  #     branch:
+  #       description: 'Branch'
+  #       required: true
 
 jobs:
   # This workflow contains a single job called "build"
