--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,6 @@ jobs:
         run: |
           git checkout -b CP-${{github.event.number}}
           git merge --ff-only ${GIT_BRANCH_NAME}
-          git push -u origin CP-${{github.event.number}}
+          git push -u origin/CP-${{github.event.number}}
         
         
