--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,5 +43,6 @@ jobs:
           git checkout -b CP-${{github.event.number}}
           commits=$(git log origin/master..origin/${GIT_BRANCH_NAME} --pretty=format:"%h")
           for sha in $commits; do git cherry-pick $sha; done
+          git push -u origin CP-${{github.event.number}}
         
         
